--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -448,6 +448,7 @@
   commands:
       - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
       - ./ci/env/install-minimal.sh
+      - pip install pandas tabulate tensorboardX>=1.9 requests  # ray[tune]
       - ./ci/env/env_info.sh
       - python ./ci/env/check_minimal_install.py
       - bazel test --config=ci $(./ci/run/bazel_export_options)  --build_tests_only --test_tag_filters=minimal python/ray/train/...
