--- a/python/ray/train/BUILD
+++ b/python/ray/train/BUILD
@@ -49,7 +49,7 @@ py_test(
 )
 
 py_test(
-    name = "transformers_example",
+    name = "transformers_example_gpu",
     size = "large",
     main = "examples/transformers/transformers_example.py",
     srcs = ["examples/transformers/transformers_example.py"],
@@ -58,6 +58,18 @@ py_test(
     args = ["--model_name_or_path=bert-base-cased", "--task_name=mrpc",
     "--max_length=32", "--per_device_train_batch_size=64",
     "--max_train_steps=2", "--start_local", "--num_workers=2", "--use_gpu"]
+)
+
+py_test(
+    name = "transformers_example_cpu",
+    size = "large",
+    main = "examples/transformers/transformers_example.py",
+    srcs = ["examples/transformers/transformers_example.py"],
+    tags = ["team:ml", "exclusive", "tune"],
+    deps = [":train_lib"],
+    args = ["--model_name_or_path=bert-base-cased", "--task_name=mrpc",
+    "--max_length=32", "--per_device_train_batch_size=64",
+    "--max_train_steps=2", "--start_local", "--num_workers=2"]
 )
 
 py_test(
