[docs] Add an example for simple highly parallelizable tasks. (#24885)
It's important to show how Ray can be used for easily parallelizable independent tasks. I put this together to demonstrate how to di this.

--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -233,6 +233,7 @@ parts:
           - file: ray-core/examples/plot_hyperparameter
           - file: ray-core/examples/plot_parameter_server
           - file: ray-core/examples/plot_pong_example
+          - file: ray-core/examples/highly_parallel
       - file: ray-core/package-ref
 
   - caption: Ray Clusters
