--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -175,6 +175,7 @@ py_test_module_list(
     "test_scheduling_performance.py",
     "test_get_or_create_actor.py",
     "test_gcs_utils.py",
+    "test_advanced_serial.py",
   ],
   size = "small",
   extra_srcs = SRCS,
