--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -83,7 +83,7 @@ pytest-sugar
 pytest-lazy-fixture
 pytest-timeout
 pytest-virtualenv
-pytest-xdist
+pytest-xdist < 3.0.0
 redis >= 3.5.0, < 4.0.0
 scikit-learn==0.24.2
 testfixtures
