--- a/python/ray/_private/runtime_env_prototype/sdk/java/pom.xml
+++ b/python/ray/_private/runtime_env_prototype/sdk/java/pom.xml
@@ -26,9 +26,14 @@
       <scope>test</scope>
     </dependency>
       <dependency>
-          <groupId>com.google.code.gson</groupId>
-          <artifactId>gson</artifactId>
-          <version>2.8.5</version>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>2.13.3</version>
+      </dependency>
+      <dependency>
+          <groupId>com.github.java-json-tools</groupId>
+          <artifactId>json-schema-validator</artifactId>
+          <version>2.2.14</version>
       </dependency>
   </dependencies>
 
