--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -249,6 +249,7 @@ parts:
 
   - caption: Developer Guides
     chapters:
+      - file: ray-contribute/stability
       - file: ray-contribute/getting-involved
         sections:
           - file: ray-contribute/development
