add self to codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,7 @@
 
 # ==== Documentation ====
 
-/doc/ @maxpumperla @pcmoritz @richardliaw @edoakes @simon-mo
+/doc/ @maxpumperla @pcmoritz @richardliaw @edoakes @simon-mo @ericl
 
 # ==== Ray core ====
 
