--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -163,6 +163,7 @@ parts:
               - file: serve/deploying-serve
               - file: serve/monitoring
               - file: serve/performance
+              - file: serve/autoscaling
               - file: serve/deployment-graph
                 sections:
                   - file: serve/deployment-graph/deployment-graph-e2e-tutorial
