--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -365,7 +365,7 @@ py_test(
 
 py_test(
     name = "test_deployment_graph_autoscaling",
-    size = "large",
+    size = "medium",
     srcs = serve_tests_srcs,
     tags = ["exclusive", "team:serve"],
     deps = [":serve_lib"],
