--- a/release/release_tests.yaml
+++ b/release/release_tests.yaml
@@ -2144,30 +2144,7 @@
 
   run:
     timeout: 14400
-    script: python learning_tests/run.py --yaml-sub-dir=a-e --test-name=rllib_learning_tests_f_to_z
-    type: sdk_command
-    file_manager: job
-
-  alert: default
-
-- name: rllib_learning_tests_e_to_z
-  group: RLlib tests
-  working_dir: rllib_tests
-
-  legacy:
-    test_name: learning_tests
-    test_suite: rllib_tests
-
-  frequency: nightly
-  team: ml
-
-  cluster:
-    cluster_env: app_config.yaml
-    cluster_compute: 8gpus_96cpus.yaml
-
-  run:
-    timeout: 14400
-    script: python learning_tests/run.py
+    script: python learning_tests/run.py --yaml-sub-dir=f-z --test-name=rllib_learning_tests_f_to_z
     type: sdk_command
     file_manager: job
 
