--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -281,9 +281,9 @@ py_test(
 )
 
 py_test(
-    name = "test_sync",
+    name = "test_sync_file_transfer",
     size = "medium",
-    srcs = ["tests/test_sync.py"],
+    srcs = ["tests/test_sync_file_transfer.py"],
     deps = [":tune_lib"],
     tags = ["team:ml", "exclusive", "tests_dir_S"],
 )
