--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -188,6 +188,7 @@ parts:
               - file: rllib/rllib-models
               - file: rllib/rllib-concepts
               - file: rllib/rllib-sample-collection
+              - file: rllib/rllib-replay-buffers
               - file: rllib/rllib-offline
               - file: rllib/rllib-dev
           - file: rllib/rllib-examples
