--- a/python/ray/serve/BUILD
+++ b/python/ray/serve/BUILD
@@ -364,6 +364,14 @@ py_test(
 )
 
 py_test(
+    name = "test_deployment_graph_autoscaling",
+    size = "medium",
+    srcs = serve_tests_srcs,
+    tags = ["exclusive", "team:serve"],
+    deps = [":serve_lib"],
+)
+
+py_test(
     name = "test_deployment_graph_classmethod",
     size = "medium",
     srcs = serve_tests_srcs,
