--- a/release/rllib_tests/learning_tests/yaml_files/a-e/cql-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/a-e/cql-halfcheetahbulletenv-v0.yaml
@@ -2,7 +2,7 @@ cql-halfcheetahbulletenv-v0:
     env: HalfCheetahBulletEnv-v0
     run: CQL
     pass_criteria:
-        evaluation/episode_reward_mean: 400.0
+        episode_reward_mean: 400.0
         timesteps_total: 10000000
     stop:
         time_total_s: 3600
