--- a/release/rllib_tests/learning_tests/yaml_files/f-z/marwil-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/f-z/marwil-halfcheetahbulletenv-v0.yaml
@@ -2,7 +2,7 @@ marwil-halfcheetahbulletenv-v0:
     env: HalfCheetahBulletEnv-v0
     run: MARWIL
     pass_criteria:
-        episode_reward_mean: 400.0
+        evaluation/episode_reward_mean: 400.0
         timesteps_total: 10000000
     stop:
         time_total_s: 3600
