[rfc][doc] Add clarity to stability guidelines (#25611)

--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -254,6 +254,7 @@ parts:
 
   - caption: Developer Guides
     chapters:
+      - file: ray-contribute/stability
       - file: ray-contribute/getting-involved
         sections:
           - file: ray-contribute/development
