--- a/python/ray/tests/BUILD
+++ b/python/ray/tests/BUILD
@@ -60,6 +60,7 @@ py_test_module_list(
     "test_healthcheck.py",
     "test_kill_raylet_signal_log.py",
     "test_memstat.py",
+    "test_protobuf_compatibility.py"
   ],
   size = "medium",
   extra_srcs = SRCS,
