--- a/.bazelrc
+++ b/.bazelrc
@@ -108,7 +108,12 @@ build:asan --copt -g
 build:asan --copt -fsanitize=address
 build:asan --copt -DADDRESS_SANITIZER
 build:asan --copt -fno-omit-frame-pointer
+build:asan --copt -fsanitize=undefined
+build:asan --copt -fno-sanitize=vptr
+build:asan --copt -fno-sanitize-recover=all
 build:asan --linkopt -fsanitize=address
+build:asan --linkopt -fsanitize=undefined
+build:asan --linkopt -fno-sanitize-recover=all
 test:asan --jobs=1
 test:asan --test_env=ASAN_OPTIONS="detect_leaks=0"
 # This config is only for running ASAN with LLVM toolchain on Linux.
@@ -118,16 +123,6 @@ build:asan-clang --config=llvm
 build:asan-clang --copt -mllvm
 build:asan-clang --copt -asan-use-private-alias=1
 
-build:asan-build --strip=never
-build:asan-build -c dbg
-build:asan-build --copt -fsanitize=address
-build:asan-build --copt -DADDRESS_SANITIZER
-build:asan-build --copt -O1
-build:asan-build --copt -g
-build:asan-build --copt -fno-omit-frame-pointer
-build:asan-build --copt -static-libasan
-build:asan-build --linkopt -fsanitize=address
-build:asan-build --linkopt -static-libasan
 # For example, for Ubuntu 18.04 libasan can be found here:
 # test:asan --test_env=LD_PRELOAD="/usr/lib/gcc/x86_64-linux-gnu/7/libasan.so"
 test:asan-buildkite --test_env=LD_PRELOAD="/usr/lib/x86_64-linux-gnu/libasan.so.5"
