--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -39,7 +39,6 @@
   conditions:
     [
         "RAY_CI_LINUX_WHEELS_AFFECTED",
-        "RAY_CI_JAVA_AFFECTED",
     ]
   commands:
     # Build the debug wheels
@@ -53,24 +52,22 @@
     # Upload to latest directory.
     - if [ "$BUILDKITE_BRANCH" == "master" ]; then python .buildkite/copy_files.py --destination wheels --path ./.whl; fi
 
-# Not working now.
-# - label: ":ferris_wheel: ASAN Wheels"
-#   conditions:
-#     [
-#         "RAY_CI_LINUX_WHEELS_AFFECTED",
-#         "RAY_CI_JAVA_AFFECTED",
-#     ]
-#   commands:
-#     # Build the asan wheels
-#     - RAY_DEBUG_BUILD=asan LINUX_WHEELS=1 ./ci/ci.sh build
-#     # Upload the wheels.
-#     # We don't want to push on PRs, in fact, the copy_files will fail because unauthenticated.
-#     - if [ "$BUILDKITE_PULL_REQUEST" != "false" ]; then exit 0; fi
-#     - pip install -q docker aws_requests_auth boto3
-#     # Upload to branch directory.
-#     - python .buildkite/copy_files.py --destination branch_wheels --path ./.whl
-#     # Upload to latest directory.
-#     - if [ "$BUILDKITE_BRANCH" == "master" ]; then python .buildkite/copy_files.py --destination wheels --path ./.whl; fi
+- label: ":ferris_wheel: ASAN Wheels"
+  conditions:
+    [
+        "RAY_CI_LINUX_WHEELS_AFFECTED",
+    ]
+  commands:
+    # Build the asan wheels
+    - UPLOAD_WHEELS_AS_ARTIFACTS=1 LINUX_WHEELS=1 RAY_DEBUG_BUILD=asan ./ci/ci.sh build
+    # Upload the wheels and jars
+    # We don't want to push on PRs, in fact, the copy_files will fail because unauthenticated.
+    - if [ "$BUILDKITE_PULL_REQUEST" != "false" ]; then exit 0; fi
+    - pip install -q docker aws_requests_auth boto3
+    # Upload to branch directory.
+    - python .buildkite/copy_files.py --destination branch_wheels --path ./.whl
+    # Upload to latest directory.
+    - if [ "$BUILDKITE_BRANCH" == "master" ]; then python .buildkite/copy_files.py --destination wheels --path ./.whl; fi
 
 - label: ":docker: Build Images: py36 (1/2)"
   conditions: ["RAY_CI_LINUX_WHEELS_AFFECTED"]
