--- a/python/ray/air/BUILD
+++ b/python/ray/air/BUILD
@@ -290,6 +290,14 @@ py_test(
 )
 
 py_test(
+    name = "test_util_file_transfer",
+    size = "medium",
+    srcs = ["tests/test_util_file_transfer.py"],
+    deps = [":tune_lib"],
+    tags = ["team:ml", "exclusive", "tests_dir_S"],
+)
+
+py_test(
     name = "test_torch_utils",
     size = "small",
     srcs = ["tests/test_torch_utils.py"],
