Move test again

--- a/python/ray/tune/BUILD
+++ b/python/ray/tune/BUILD
@@ -265,6 +265,14 @@ py_test(
 )
 
 py_test(
+    name = "test_util_file_transfer",
+    size = "medium",
+    srcs = ["tests/test_util_file_transfer.py"],
+    deps = [":tune_lib"],
+    tags = ["team:ml", "exclusive", "tests_dir_S"],
+)
+
+py_test(
     name = "test_syncer",
     size = "medium",
     srcs = ["tests/test_syncer.py"],
