--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -103,7 +103,7 @@ define_java_module(
 
 define_java_module(
     name = "test",
-    # For cpp x-lang tests.
+    # For cpp x-lang tests. See //cpp:cluster_mode_test.
     visibility = ["//cpp:__subpackages__"],
     deps = [
         ":io_ray_ray_api",
