--- a/python/ray/serve/tests/test_config_files/pizza.yaml
+++ b/python/ray/serve/tests/test_config_files/pizza.yaml
@@ -1,7 +1,4 @@
-import_path: conditional_dag.serve_dag
-
-runtime_env:
-  working_dir: https://github.com/ray-project/test_dag/archive/76a741f6de31df78411b1f302071cde46f098418.zip
+import_path: ray.serve.tests.test_config_files.test_dag.conditional_dag.serve_dag
 
 deployments:
 
