--- a/.bazelrc
+++ b/.bazelrc
@@ -195,4 +195,5 @@ try-import %workspace%/.llvm-local.bazelrc
 
 # Even with sandbox mode bazel prioritizes system headers over the ones in the sandbox.
 # It picks up the system headers when someone has protobuf installed via Homebrew.
+# Work around for https://github.com/bazelbuild/bazel/issues/8053
 build:macos --sandbox_block_path=/usr/local/
