--- a/release/requirements.txt
+++ b/release/requirements.txt
@@ -11,7 +11,7 @@ toml
 python-dotenv
 expiringdict
 requests
-protobuf >= 3.12.0, <= 4.21.1
+protobuf >= 3.12.0
 pytz
 git+https://github.com/ray-project/xgboost_ray.git#egg=xgboost_ray
 git+https://github.com/ray-project/lightgbm_ray.git#lightgbm_ray
