Make isort compatible with black (#25748)
Make isort compatible with black

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,6 +2,7 @@
 # This is to make isort compatible with Black. See
 # https://black.readthedocs.io/en/stable/the_black_code_style.html#how-black-wraps-lines.
 line_length=88
+profile=black
 multi_line_output=3
 include_trailing_comma=True
 use_parentheses=True
