--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -149,7 +149,7 @@ cc_test(
         "src/ray/test/cluster/*.h",
     ]),
     args = [
-        "--ray_code_search_path=$(location plus.so):$(location counter.so):cpp/src/ray/test/cluster",
+        "--ray_code_search_path=$(location plus.so):$(location counter.so):cpp/src/ray/test/cluster:$(location //java:libio_ray_ray_test.jar)",
         "--ray_head_args '--include-dashboard false'",
     ],
     copts = COPTS,
@@ -158,6 +158,7 @@ cc_test(
         "plus.so",
         "ray_cpp_pkg",
         "src/ray/test/cluster/test_cross_language_invocation.py",
+        "//java:libio_ray_ray_test.jar",
     ],
     linkstatic = True,
     tags = ["team:core"],
