--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -145,7 +145,7 @@ cc_test(
 cc_test(
     name = "cluster_mode_test",
     srcs = glob([
-        "src/ray/test/cluster/*.cc",
+        "src/ray/test/cluster/cluster_mode_test.cc",
         "src/ray/test/cluster/*.h",
     ]),
     args = [
@@ -158,6 +158,27 @@ cc_test(
         "plus.so",
         "ray_cpp_pkg",
         "src/ray/test/cluster/test_cross_language_invocation.py",
+    ],
+    linkstatic = True,
+    tags = ["team:core"],
+    deps = [
+        "ray_api",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
+    name = "cluster_mode_xlang_test",
+    srcs = glob([
+        "src/ray/test/cluster/cluster_mode_xlang_test.cc",
+        "src/ray/test/cluster/*.h",
+    ]),
+    args = [
+        "--ray_head_args '--include-dashboard false'",
+    ],
+    copts = COPTS,
+    data = [
+        "ray_cpp_pkg",
         "//java:libio_ray_ray_test.jar",
     ],
     linkstatic = True,
