--- a/release/rllib_tests/learning_tests/yaml_files/a-e/bc-halfcheetahbulletenv-v0.yaml
+++ b/release/rllib_tests/learning_tests/yaml_files/a-e/bc-halfcheetahbulletenv-v0.yaml
@@ -3,9 +3,10 @@ bc-halfcheetahbulletenv-v0:
     run: BC
     pass_criteria:
         evaluation/episode_reward_mean: 400.0
-        timesteps_total: 10000000
+        # Can not check throughput for offline methods.
+        # timesteps_total: 10000000
     stop:
-        time_total_s: 3600
+        time_total_s: 7200
     config:
         # Use input produced by expert SAC algo.
         input: ["~/halfcheetah_expert_sac.zip"]
