--- a/python/requirements/ml/requirements_dl.txt
+++ b/python/requirements/ml/requirements_dl.txt
@@ -14,9 +14,7 @@ torchvision==0.10.0;sys_platform=="darwin"
 torch==1.9.0+cpu;sys_platform!="darwin"
 torchvision==0.10.0+cpu;sys_platform!="darwin"
 
-# Jax
-jax[cpu]==0.3.4
-jaxlib==0.3.2
-flax==0.4.0
-optax==0.1.1
-einops==0.4.1
+jaxlib==0.3.10;sys_platform!="darwin"
+flax==0.4.0;sys_platform!="darwin"
+optax==0.1.1;sys_platform!="darwin"
+einops==0.4.1;sys_platform!="darwin"
