Revert "[RLlib] Remove execution plan code no longer used by RLlib. (#25624)"
This reverts commit 804719876bccee004be8aea1ff796df20a6911f0.

--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1884,6 +1884,13 @@ py_test(
 )
 
 py_test(
+    name = "tests/test_execution",
+    tags = ["team:rllib", "tests_dir", "tests_dir_E"],
+    size = "medium",
+    srcs = ["tests/test_execution.py"]
+)
+
+py_test(
     name = "tests/test_export",
     tags = ["team:rllib", "tests_dir", "tests_dir_E"],
     size = "medium",
