--- a/.isort.cfg
+++ b/.isort.cfg
@@ -9,4 +9,6 @@ use_parentheses=True
 float_to_top=True
 
 
-known_first_party=ray
+known_local_folder=ray
+known_afterray=psutil,setproctitle
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,AFTERRAY
