--- a/.buildkite/pipeline.gpu.large.yml
+++ b/.buildkite/pipeline.gpu.large.yml
@@ -18,6 +18,22 @@
     - ./ci/env/env_info.sh
     - bazel test --config=ci $(./ci/run/bazel_export_options) --build_tests_only --test_tag_filters=datasets_train doc/...
 
+- label: ":tv: :brain: RLlib: Trainer Tests (GPU)"
+  conditions: ["RAY_CI_RLLIB_DIRECTLY_AFFECTED"]
+  commands:
+    - cleanup() { if [ "${BUILDKITE_PULL_REQUEST}" = "false" ]; then ./ci/build/upload_build_info.sh; fi }; trap cleanup EXIT
+    - PYTHON=3.7 RLLIB_TESTING=1 ./ci/env/install-dependencies.sh
+    - pip install -Ur ./python/requirements_ml_docker.txt
+    - ./ci/env/env_info.sh
+    # Test all tests in the `algorithms` dir:
+    - bazel test --config=ci $(./ci/run/bazel_export_options)
+      --build_tests_only
+      --jobs 2
+      --test_tag_filters=algorithms_dir,-algorithms_dir_generic,-multi_gpu
+      --test_env=RAY_USE_MULTIPROCESSING_CPU_COUNT=1
+      --test_env=RLLIB_NUM_GPUS=1
+      rllib/...
+
 - label: ":tv: :brain: RLlib: Multi-GPU Tests"
   conditions: ["RAY_CI_RLLIB_AFFECTED"]
   commands:
@@ -30,7 +46,6 @@
     # wait for the GPU to become available.
     - bazel test --config=ci $(./ci/run/bazel_export_options) --build_tests_only --jobs 2
       --test_tag_filters=multi_gpu --test_env=RAY_USE_MULTIPROCESSING_CPU_COUNT=1 rllib/...
-
 
 - label: ":tv: :airplane: ML GPU tests (ray/air)"
   conditions: ["RAY_CI_ML_AFFECTED"]
