--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -179,6 +179,7 @@ cc_test(
         "src/ray/test/cluster/*.h",
     ]),
     args = [
+        "--ray_code_search_path=$(location //java:libio_ray_ray_test.jar)",
         "--ray_head_args '--include-dashboard false'",
     ],
     copts = COPTS,
