--- a/rllib/BUILD
+++ b/rllib/BUILD
@@ -1542,6 +1542,13 @@ py_test(
 )
 
 py_test(
+    name = "evaluation/tests/test_episode_v2",
+    tags = ["team:rllib", "evaluation"],
+    size = "small",
+    srcs = ["evaluation/tests/test_episode_v2.py"]
+)
+
+py_test(
     name = "evaluation/tests/test_postprocessing",
     tags = ["team:rllib", "evaluation"],
     size = "small",
