exclude doc_code from import sorting (#25772)
Skip sorting the imports in doc_code.

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -9,6 +9,7 @@ use_parentheses=True
 float_to_top=True
 
 
+skip_glob=doc/**/doc_code/*
 known_local_folder=ray
 known_afterray=psutil,setproctitle
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,AFTERRAY
