--- a/.isort.cfg
+++ b/.isort.cfg
@@ -7,9 +7,10 @@ multi_line_output=3
 include_trailing_comma=True
 use_parentheses=True
 float_to_top=True
+filter_files=True
 
 
-skip_glob=doc/**/doc_code/*
+skip_glob=ci/lint,doc/*,python/ray/_private/,python/ray/air/,python/ray/cloudpickle/*,python/ray/core/*,dashboard/*,python/ray/data/*,python/ray/experimental/*,python/ray/includes/*,python/ray/internal/*,python/ray/ray_operator/*,python/ray/scripts/*,python/ray/serve/*,python/ray/sgd/*,python/ray/streaming/*,python/ray/tests/*,python/ray/tests/*,python/ray/train/*,python/ray/tune/*,python/ray/util/*,python/ray/workers/*,python/ray/workflow/*,python/ray/*.py,rllib,release,
 known_local_folder=ray
 known_afterray=psutil,setproctitle
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,AFTERRAY
