--- a/.isort.cfg
+++ b/.isort.cfg
@@ -9,7 +9,9 @@ use_parentheses=True
 float_to_top=True
 filter_files=True
 
-
+# Skip docs/* as these are carefully crafted and aren't strictly code.
+# For the rest we will gradually remove them from the blacklist we reformat
+# them to follow the style guide.
 skip_glob=ci/*,doc/*,python/ray/_raylet*,python/ray/_private/*,python/ray/air/*,python/ray/cloudpickle/*,python/ray/core/*,dashboard/*,python/ray/data/*,python/ray/experimental/*,python/ray/includes/*,python/ray/internal/*,python/ray/ray_operator/*,python/ray/scripts/*,python/ray/serve/*,python/ray/sgd/*,python/ray/streaming/*,python/ray/tests/*,python/ray/tests/*,python/ray/train/*,python/ray/tune/*,python/ray/util/*,python/ray/workers/*,python/ray/workflow/*,python/ray/*.py,rllib/*,release/*,
 known_local_folder=ray
 known_afterray=psutil,setproctitle
