--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -39,9 +39,9 @@ pandas>=1.3.0; python_version >= '3.7'
 scipy >= 1.5
 tabulate
 tensorboardX >= 1.9
-uvicorn==0.16.0
+uvicorn
 dataclasses; python_version < '3.7'
-starlette==0.18.0
+starlette
 aiorwlock
 
 # Requirements for running tests
@@ -76,20 +76,20 @@ pexpect
 Pillow; platform_system != "Windows"
 pygments
 pyspark==3.1.2
-pytest==5.4.3
-pytest-asyncio==0.16.0
+pytest
+pytest-asyncio
 pytest-rerunfailures
 pytest-sugar
 pytest-lazy-fixture
 pytest-timeout
 pytest-virtualenv
 redis >= 3.5.0, < 4.0.0
-scikit-learn==0.24.2
+scikit-learn
 testfixtures
 werkzeug
 xlrd
 starlette
-fastapi==0.76.0
+fastapi
 smart_open[s3]
 tqdm
 async-exit-stack
