--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -76,7 +76,7 @@ pexpect
 Pillow; platform_system != "Windows"
 pygments
 pyspark==3.1.2
-pytest
+pytest<7
 pytest-asyncio
 pytest-rerunfailures
 pytest-sugar
