--- a/.buildkite/pipeline.macos.yml
+++ b/.buildkite/pipeline.macos.yml
@@ -97,7 +97,7 @@ steps:
   conditions: ["RAY_CI_CORE_CPP_AFFECTED", "RAY_CI_PYTHON_AFFECTED"]
   commands:
     - *prelude_commands
-    - PARALLEL_CI=1 . ./ci/ci.sh test_large
+    - . ./ci/ci.sh test_large --test_env=PARALLEL_CI=1
     - *epilogue_commands
 
 - label: ":mac: :apple: Medium A-J"
