--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1327,6 +1327,21 @@ cc_test(
 )
 
 cc_test(
+    name = "jemalloc_test",
+    size = "small",
+    srcs = [
+        "src/ray/util/jemalloc_test.cc",
+    ],
+    copts = COPTS,
+    tags = ["team:core"],
+    deps = [
+        "@jemalloc//:jemalloc",
+        "@com_google_googletest//:gtest",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_test(
     name = "get_request_queue_test",
     size = "small",
     srcs = [
