--- a/doc/source/_toc.yml
+++ b/doc/source/_toc.yml
@@ -51,6 +51,8 @@ parts:
                 title: Processing the NYC taxi dataset
               - file: data/examples/big_data_ingestion
                 title: Large-scale ML Ingest
+              - file: data/examples/ocr_example
+                title: Running OCR with Ray dataset
           - file: data/faq
           - file: data/package-ref
           - file: data/integrations
