[Cpp worker][Java worker]Support Java call Cpp Actor

--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -212,6 +212,9 @@ cc_binary(
 
 cc_binary(
     name = "counter.so",
+    # (WangTaoTheTonic)For java x-lang tests. See //java:all_tests
+    # and `CrossLanguageInvocationTest.java`.
+    visibility = ["//java:__subpackages__"],
     testonly = True,
     srcs = [
         "src/ray/test/cluster/counter.cc",
