--- a/java/BUILD.bazel
+++ b/java/BUILD.bazel
@@ -103,7 +103,7 @@ define_java_module(
 
 define_java_module(
     name = "test",
-    # For cpp x-lang tests. See //cpp:cluster_mode_test.
+    # (WangTaoTheTonic)For cpp x-lang tests. See //cpp:cluster_mode_xlang_test.
     visibility = ["//cpp:__subpackages__"],
     deps = [
         ":io_ray_ray_api",
@@ -179,9 +179,11 @@ define_java_module(
 
 java_binary(
     name = "all_tests",
+    testonly = True,
     args = ["java/testng.xml"],
     data = ["testng.xml"],
     main_class = "org.testng.TestNG",
+    resources = ["//cpp:counter.so"],
     runtime_deps = [
         ":io_ray_ray_performance_test",
         ":io_ray_ray_runtime_test",
