--- a/cpp/BUILD.bazel
+++ b/cpp/BUILD.bazel
@@ -79,7 +79,6 @@ cc_binary(
     ]),
     copts = COPTS,
     linkstatic = True,
-    visibility = ["//visibility:public"],
     deps = [
         "ray_cpp_lib",
         "@boost//:callable_traits",
@@ -261,7 +260,7 @@ cc_test(
     linkstatic = True,
     tags = ["team:core"],
     deps = [
-        "//:ray_api",
+        "ray_api",
     ],
 )
 
